syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc GetAllUsers (Empty) returns (UsersResponse);
   rpc GetAllStudents (Empty) returns (UsersResponse);
}

message Empty {}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2;
  User user = 3;
  string error = 4;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  User user = 2;
  string error = 3;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string role = 4;
}

message RegisterResponse {
  bool success = 1;
  int32 userId = 2;
  User user = 3;
  string error = 4;
}

message User {
  int32 userId = 1;
  string username = 2;
  string role = 3;
  string email = 4;
}

message UsersResponse {
  repeated UserInfo users = 1;
}

message UserInfo {
  int32 id = 1;
  string username = 2;
  string role = 3;
  string email = 4;
  string createdAt = 5;
}