syntax = "proto3";

package grades;

service GradeService {
  rpc GetStudentGrades (StudentGradesRequest) returns (GradesResponse);
  rpc UploadGrade (UploadGradeRequest) returns (UploadGradeResponse);
  rpc GetCourseGrades (CourseGradesRequest) returns (GradesResponse);
}

message StudentGradesRequest {
  int32 userId = 1;
}

message CourseGradesRequest {
  int32 courseId = 1;
}

message Grade {
  int32 id = 1;
  int32 studentId = 2;
  int32 courseId = 3;
  string grade = 4;
  int32 facultyId = 5;
  string createdAt = 6;
  string courseCode = 7;
  string courseName = 8;
}

message GradesResponse {
  repeated Grade grades = 1;
}

message UploadGradeRequest {
  int32 studentId = 1;
  int32 courseId = 2;
  string grade = 3;
  int32 facultyId = 4;
}

message UploadGradeResponse {
  bool success = 1;
  string message = 2;
  int32 gradeId = 3;
}